styles.css
body {
    font-family: 'Roboto', sans-serif;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

*, *::before, *::after {
    box-sizing: inherit;
}

.header, .footer {
    background-color: #1F2937;
    margin: 0;
}

.header {
    display: flex;
    padding: 1em 192px;
    justify-content: space-between;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
}

.links {
    display: flex;
    list-style-type: none;
    padding: 0;
    margin: 0;
    gap: 1em;
    align-items: center;
}

a {
    text-decoration: none;
}

.links a {
    font-size: 18px;
    color: #E5E7EB;
}

.section-one {
    background-color: #1F2937;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 64px 192px;
    gap: 4em;
}

.main-text {
    color: #F9FAF8;
    margin: 0;
}

.secondary-text {
    font-size: 18px;
    color: #E5E7EB;
}

.section-one .main-text {
    font-size: 48px;
    
}

.section-one .secondary-text {
    margin: 8px 0 24px 0;
}

.section-one a {
    border: none;
    background-color: #3882F6;
    border-radius: 8px;
    font-size: 18px;
    color: #F9FAF8;
    font-weight: 600;
    padding: 8px 32px;
    flex: none;
}

.section-one img {
    width: 350px;
}

.section-two {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    padding: 16px 192px 32px 192px;
    gap: 16px;
}

h2 {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
}

.info {
    max-width: 960px;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    text-align: center;
    gap: 16px 56px;
}

.info-content {
    width: 150px;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    text-align: center;
}

.info-box {
    width: 150px;
    height: 150px;
    border: 4px solid #3882F6;
    border-radius: 16px;
}

.info-text {
    font-size: 18px;
}

.section-two img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 12px;
}

.section-three {
    background-color: #E5E7EB;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    padding: 128px 192px;
    gap: 12px;
}

.quote {
    min-width: 400px;
    width: 75%;
    font-size: 36px;
    color: #1F2937;
    font-weight: 300;
    font-style: italic;
    margin: 0;
}

.quote-author {
    font-size: 24px;
    font-weight: bold;
    align-self: flex-end;
    padding: 0 14%;
    margin: 0;
}

.section-four {
    padding: 96px 192px;
}

.section-four .container {
    background-color: #3882F6;
    border-radius: 8px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 48px 96px;
}

.section-four .main-text {
    font-size: 24px;
}

.section-four .secondary-text {
    margin: 4px 0 0 0;
}

.section-four a {
    border: 2px solid #F9FAF8;
    background-color: #3882F6;
    border-radius: 8px;
    font-size: 18px;
    color: #F9FAF8;
    font-weight: 600;
    padding: 8px 32px;
    flex: none;
}

.footer {
    color: #E5E7EB;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 48px 192px;
}

